# rust-simple-api-template

./: Cargo.toml  docker-compose.yml
configs/deploy/: deploy.yml
configs/docker/: Dockerfile
migrations/2024-01-13-145932_create_user/: up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: mod.rs  simple_controller.rs
src/entities/: user_entity.rs
src/infra/: database.rs
src/infra/models/: mod.rs
src/infra/models/user/: mod.rs  user_model.rs  user_model_mapper.rs
src/services/: entity_service.rs  user_service.rs
src/traits/: controller_trait.rs  mod.rs  model_trait.rs  service_trait.rs
