[package]
name = "rust-simple-api-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
axum = "0.7.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
diesel = { version = "2.1.4", features = ["mysql"] }
dotenv = "0.15.0"
